# QuickCut

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeOptions.cmake  CNAME  README.md  conanfile.txt  index.html
.github/workflows/: build.yml  linux_build.yml  macos_build.yml  windows_build.yml
assets/css/: responsive.css  style.css  typography.css
assets/js/: raindrops.js  theme.js
cmake/: utility.cmake
contrib/: ConfigureService.bat  Doxyfile  UninstallService.bat  add_conan_remotes.sh  run-clang-format.sh  run_clang-format.sh
docs/: BUILD.md  LICENSE  README.md
media/: logo.psd
source/: CMakeLists.txt  QuickCut.sln
source/QuickCut/: AboutWindow.cpp  AboutWindow.h  ActionEditWindow.cpp  ActionEditWindow.h  ActionEditWindow.ui  ActionWindow.cpp  ActionWindow.h  CMakeLists.txt  CheckUpdatesWindow.cpp  CheckUpdatesWindow.h  ExamplesWindow.cpp  ExamplesWindow.h  ExamplesWindow.ui  MainWindow.cpp  MainWindow.h  MainWindow.qrc  MainWindow.ui  Preferences.cpp  Preferences.h  QShortcutInput.cpp  QShortcutInput.h  QuickCut.vcxproj  QuickCut.vcxproj.filters  main.cpp
source/QuickCut/Resources/: QuickCut.qrc
source/QuickCut/Resources/platform/windows/: QuickCut.rc  resource.h
source/QuickCut/Resources/ui/: AboutView.ui  AboutWindow.ui  ActionEditWindow.ui  ActionView.ui  ActionWindow.ui  CheckUpdatesWindow.ui  ExamplesView.ui  MainView.ui  MainWindow.ui  UpdatesView.ui  UpdatesWindow.ui
source/QuickCut/Resources/ui/styles/: theme_breezeDark.qss  theme_breezeLight.qss  theme_dark.qss  theme_darkorange.qss
source/QuickCut/Styles/: theme_amoled.qss  theme_breezeLight.qss  theme_darkorange.qss
source/QuickCut/ViewModels/: ActionsModel.cpp  ActionsModel.h
source/QuickCut/Views/: AboutView.cpp  AboutView.h  AboutWindow.cpp  AboutWindow.h  ActionView.cpp  ActionView.h  ActionWindow.cpp  ExamplesView.cpp  ExamplesView.h  ExamplesWindow.cpp  ExamplesWindow.h  MainView.cpp  MainView.h  MainWindow.cpp  MainWindow.h  UpdatesView.cpp  UpdatesView.h  UpdatesWindow.cpp  UpdatesWindow.h
source/QuickCut/Widgets/: QShortcutInput.cpp  QShortcutInput.h
source/QuickCutConsole/: CMakeLists.txt  QuickCutConsole.cpp  QuickCutConsole.h  QuickCutConsoleUnix.cpp  QuickCutConsoleUnix.h  QuickCutConsoleWindows.cpp  QuickCutConsoleWindows.h  main.cpp
source/QuickCutConsole/Resources/: QuickCutConsole.rc  resource.h
source/QuickCutInstaller/Windows/x64/: create.bat  create.cmd
source/QuickCutInstaller/Windows/x64/config/: config.xml
source/QuickCutInstaller/Windows/x64/resources/: QuickCutSetup.rc
source/QuickCutInstaller/Windows/x86/: QuickCut.pro  README  create.bat
source/QuickCutInstaller/Windows/x86/config/: Controller.qs  config.xml  theme_ubuntu.qss
source/QuickCutInstaller/Windows/x86/resources/: QuickCutSetup.rc
source/QuickCutService/: CMakeLists.txt  QuickCutService.cpp  QuickCutService.h  QuickCutServiceUnix.cpp  QuickCutServiceUnix.h  QuickCutServiceWindows.cpp  QuickCutServiceWindows.h  main.cpp
source/QuickCutService/Resources/: QuickCutService.rc  resource.h
source/QuickCutShared/: Action.cpp  Action.h  CMakeLists.txt  Preferences.cpp  Profile.cpp  Profile.h  QuickCutPCH.cpp  QuickCutPCH.h  Types.h  pch.h
source/QuickCutShared/Hooks/: CMakeLists.txt  KeyboardHook.cpp  KeyboardHook.h  KeyboardHookUnix.cpp  KeyboardHookUnix.h  KeyboardHookWindows.cpp  KeyboardHookWindows.h
source/QuickCutShared/Managers/: ActionManager.cpp  ActionManager.h  BaseManager.cpp  BaseManager.h  CMakeLists.txt  IParserOperations.h  PreferenceManager.cpp  PreferenceManager.h  ProfileManager.cpp  ProfileManager.h
source/QuickCutShared/Models/: Action.cpp  Action.h  BaseModel.cpp  BaseModel.h  CMakeLists.txt  KeyData.cpp  KeyData.h  Preference.cpp  Preference.h  Preferences.cpp  Preferences.h  Profile.cpp  Profile.h  QCTheme.cpp  QCTheme.h
source/QuickCutShared/Parser/: BaseParser.h  CMakeLists.txt  PreferenceParser.cpp  PreferenceParser.h  ProfileParser.cpp  ProfileParser.h
source/QuickCutShared/Parsers/: BaseParser.h  CMakeLists.txt  PreferenceParser.cpp  PreferenceParser.h  ProfileParser.cpp  ProfileParser.h
source/QuickCutShared/QSingleApplication/: CMakeLists.txt  QSingleInstance.cpp  QSingleInstance.h  singleapplication.cpp  singleapplication.h  singleapplication_p.cpp  singleapplication_p.h
source/QuickCutShared/QtService/: CMakeLists.txt  qtservice.cpp  qtservice.h  qtservice_p.h  qtservice_unix.cpp  qtservice_win.cpp  qtunixserversocket.cpp  qtunixserversocket.h  qtunixsocket.cpp  qtunixsocket.h
source/QuickCutShared/Utils/: CMakeLists.txt  Utility.cpp  Utility.h  UtilityUI.cpp  UtilityUI.h
source/QuickCutShared/Utils/QSingleApplication/: QSingleInstance.cpp  QSingleInstance.h  singleapplication.cpp  singleapplication_p.cpp
src/: CMakeLists.txt
src/QuickCut/: AboutWindow.cpp  AboutWindow.ui  ActionEditWindow.cpp  ActionEditWindow.h  ActionEditWindow.ui  CheckUpdatesWindow.cpp  CheckUpdatesWindow.h  MainWindow.cpp  MainWindow.h  MainWindow.qrc  MainWindow.ui  Preferences.cpp  Preferences.h  QuickCut.rc  QuickCut.vcxproj  QuickCut.vcxproj.filters  main.cpp
src/QuickCut/Resources/: QuickCut.exe.manifest  QuickCut.rc  resource.h
src/QuickCut/Styles/: stylesheet.qrc  theme_breezeDark.qss
src/QuickCutConsole/: QuickCutConsole.cpp  QuickCutConsole.h  QuickCutConsole.vcxproj  QuickCutConsole.vcxproj.filters  QuickCutConsoleUnix.h  QuickCutConsoleWindows.cpp  QuickCutConsoleWindows.h
src/QuickCutConsole/Resources/: QuickCutConsole.rc
src/QuickCutInstaller/Windows/x64/: QuickCut.pro  README  create.cmd
src/QuickCutInstaller/Windows/x64/config/: config.xml
src/QuickCutInstaller/Windows/x86/: QuickCut.pro  README  create.cmd
src/QuickCutService/: QuickCutService.h  QuickCutService.vcxproj  QuickCutService.vcxproj.filters  QuickCutServiceUnix.cpp  QuickCutServiceUnix.h  QuickCutServiceWindows.cpp  QuickCutServiceWindows.h
src/QuickCutService/Resources/: QuickCutService.rc
src/QuickCutShared/: Action.h  Profile.cpp  Profile.h  pch.h
src/QuickCutShared/QSingleApplication/: QSingleInstance.cpp
(+2 files in other folders)
