
cmake_minimum_required(VERSION 3.12)

##################################################################################################################
# Setup
##################################################################################################################

project(QuickCut
    LANGUAGES C CXX
    DESCRIPTION "QuickCut is the way to master your keyboard."
)

##################################################################################################################
# IDE Representation
##################################################################################################################

# Groups CMake pre-defined projects
set_property(GLOBAL PROPERTY USE_FOLDERS ON)

set_property (DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY 
    VS_STARTUP_PROJECT QuickCut
)

##################################################################################################################
# Submodules
##################################################################################################################

add_subdirectory(src)

